10.0.0-a75
==========

Improvements
------------

- InternedString : Added `__len__` python binding (#1041).
- IECoreMaya LiveScene : Added `toMayaAttributeName()`, `fromMayaAttributeName()`, and `visibilityOverrideName` (#1041).

Fixes
-----

- IECoreMaya SceneShape (#1041) :
  - Fixed bug which had been causing Maya shape visibility to affect LiveScene location visibility.
  - Fixed radial DAG menu positions for the Swap Expand options.

10.0.0-a74
==========

Features
--------

- StringAlgo : Added string substitution functionality (#1039).

Improvements
------------

- InternedString : Added constructor taking a `boost::string_view` (#1039).
- CompoundData : Added default template type for `member()` methods (#1039).

10.0.0-a73
==========

Improvements
------------

- IECoreUSD : Updated USDScene to perform naive loading of USD instances (#1036).
- IECoreHoudini : Houdini 18 compatibility (#1035).

Fixes
-----

- IECoreScene ShaderNetworkAlgo : Adapt `convertOSLComponentConnections()` for OSL 1.10 (#1031).
- IECoreMaya :
  - SceneShape VP2 : Fixed marquee selection for component locations (#1038).
  - SceneShapeInterface : Fixed bugs in `selectionIndex()` and `glGroup()` and removed `buildComponentIndexMap()` (#1038).
- IECoreNuke SceneCacheReader : Fixed selection issues for Scene View knob when using motion blur (#1037).

10.0.0-a72
==========

Fixes
-----

- IECore::Enum : Fixed comparison of different Enum types (#1032).
  We're now closer to matching Python 3 `enum.Enum` behaviour.
- IECoreMaya::ToMayaMeshConverter : Fixed a bug converting indexed normals (#1033).

10.0.0-a71
==========

Improvements
------------

- IECore :
  - Refactored `Enum`, `MenuDefinition`, `MenuItemDefinition` to new style Python classes (#1012).
  - MenuDefinition : Added `size`, `item` and `update` methods (#1012, #1013).
  - Canceller : Added `cancelled` method (#1019).
- IECoreImage : Added OIIO 2 support (#1011).
- IECoreMaya :